# GVirtuS

./: CMakeLists.txt  Makefile  README.md
docker/dev/: Dockerfile
etc/: properties.json
examples/fastapi-qwen3/: deploy_native.sh  multiprocess_requests.py
examples/llms/vllm-qwen3/: qwen.py
examples/llms/xlm-roberta-base/: roberta.py  run.sh
include/gvirtus/communicators/: Endpoint_Hybrid.h
include/gvirtus/communicators/communicators/: CommunicatorFactory.h  EndpointFactory.h  Endpoint_Rdma.h
src/backend/: Process.cpp
src/communicators/: Endpoint_Hybrid.cpp
src/communicators/hybrid/: HybridCommunicator.cpp  HybridCommunicator.h  Makefile
src/communicators/rdma/: RdmaCommunicator.cpp  RdmaCommunicator.h
src/communicators/tcp/: TcpCommunicator.cpp
src/frontend/: Frontend.cpp
